# gitSnake

./: CMakeLists.txt
snake/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake  main.cpp  makefile  snake
snake/include/: background.h  food.h  internals.h  snake.h
snake/src/: background.cpp  display.cpp  food.cpp  internals.cpp  snake.cpp
